# synthbud

./: .gitignore  LICENSE  README.md
backend/: .env.example  alembic.ini  docker-compose.yml  requirements.txt
backend/alembic/: README  env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_ing_status_fix.py  0003_preset_schema.py  0004_preset_file_hash_index.py  0005_raw_tag_taxonomy.py  (+1 more)
backend/app/: __init__.py  __main__.py  audio.py  config.py  db.py  desktop_launcher.py  main.py  models.py  schemas.py  tag_taxonomy.py
backend/pyinstaller/: synthbud-backend.spec
backend/tests/: test_cors.py  test_desktop_launcher.py  test_feature_extractor.py  test_freesound_client.py  test_freesound_ingestor.py  test_health.py  test_libraries_routes.py  test_local_library_ingestor.py  test_local_sound_library_ingestor.py  test_meta.py  test_patchstorage_ingestor.py  test_patchstorage_scraper.py  test_presets_routes.py  test_presetshare_index_ingestor.py  test_presetshare_scraper.py  test_public_catalog_ingestor.py  test_search_service.py  test_serum_parser.py  test_sounds_routes.py  test_tag_taxonomy.py  test_vital_parser.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css  types.ts  vite-env.d.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: main.rs
scripts/: build_backend_executable.sh  build_desktop_app.sh  bundle_postgres_macos.sh  dev.sh
(+54 files in other folders)
